--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
 </head>
 <body>
 
-  <h1>Primo CSS</h1>
+  <header>
+
+    <nav class="menu">
+      <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">chi siamo</a></li>
+        <li><a href="#">contatti</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
+  <h1 style="color:brown" class="titolo-grande" id="titolone">Primo CSS</h1>
 
   <!-- id ce ne è solo uno per pagina -->
   <p id="testo-principale"> <span class="testo-bold">Lorem ipsum dolor</span>, sit amet consectetur adipisicing elit. Eum ipsa sunt officia nobis non obcaecati, distinctio quidem maxime, <span style="color:red">facilis </span> recusandae consequatur animi, cupiditate fugiat ullam libero. Molestias velit cumque rerum?
@@ -49,9 +61,13 @@
   <p class="testo-secondario">Lorem ipsum <span>dolor sit amet</span>  consectetur, adipisicing elit. Placeat, eveniet?</p>
   <p class="testo-secondario">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, <span>eveniet?</span> </p>
   
-  <div class="box">
 
+  <div class="container">
+    <div class="box">
+      <p>Box centtrato con margin: 20px auto .</p>
+    </div>
   </div>
+  
 
   <section>
 
@@ -61,15 +77,52 @@
     <div class="inner-box"></div>
   </div>
 
-  <p>Lorem ipsum, dolor sit amet <span class="testo-bold">consectetur adipisicing elit</span> . Similique omnis sequi voluptatem. Nesciunt enim quo id inventore eum culpa sit beatae alias. Assumenda autem tempora consequuntur quod, quos maiores nobis.</p>
+  <p class="testo">Lorem ipsum, dolor sit amet <span class="testo-bold">consectetur adipisicing elit</span> . Similique omnis sequi voluptatem. Nesciunt enim quo id inventore eum culpa sit beatae alias. Assumenda autem tempora consequuntur quod, quos maiores nobis.</p>
 
+  <div class="box-piccolo box-arancio"></div>
+  <div class="box-piccolo box-arancio2"></div>
+  <div class="box-piccolo box-arancio3"></div>
+  <div class="box-piccolo box-arancio"></div>
+  <div class="box-piccolo box-arancio2"></div>
+  <div class="box-piccolo box-arancio3"></div>
   <div class="box-piccolo box-arancio"></div>
   <div class="box-piccolo box-arancio2"></div>
   <div class="box-piccolo box-arancio3"></div>
 
   <div class="box-image"></div>
 
-  
+  <table>
+    <tr>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+    </tr>
+    <tr>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+    </tr>
+    <tr>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+    </tr>
+    <tr>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+    </tr>
+    <tr>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+      <td>Celle</td>
+    </tr>
+  </table>
   
 </body>
 </html>
